
	1.3.4 ABI FEATURES

	- Added deactivated user icon to Fl_Tree.
	- Added the Fl_Shared_Image::scale(width, height) function which gives
	  a shared image its own drawing size, independently of the size of the
	  underlying image. This improves much image drawing on high resolution
	  surfaces such as Laser printers, PDF files, or Apple retina displays.

	Other improvements

	- Full support of Apple 'retina' displays for which one drawing unit
	  corresponds to two pixels.
	- The Mac OS X platform no longer uses the deprecated AGL
	  (Apple GL library) to draw OpenGL data. Instead, it uses standard
	  cocoa APIs. This allows FLTK to support drawing GL scenes at high
	  resolution when an Fl_Gl_Window is mapped to a 'retina' display.
	- Added Fl_Gl_Window::pixel_w(), Fl_Gl_Window::pixel_h(), and
	  Fl_Gl_Window::pixels_per_unit() useful for high resolution OpenGL windows.
	- fl_read_image() now captures all pixels within the rectangle
	  described by its arguments, whether they belong to a GL scene
	  or not (STR #3142). It also captures subwindows of GL windows.
	- Fl::delete_widget() now hides the widget or window immediately
	  (i.e. when called) - only destruction is delayed as before.
	- FLTK header files don't expose X11 definitions in user code any more
	  unless required by including FL/x.H explicitly or implicitly.
	- The PostScript code output when printing images under Linux/Unix
	  is quite smaller due to use of lossless compression techniques.
	- The Linux/Unix printer dialog now uses BSD-style printing commands
	  (lpr/lpq) when SystemV-style commands (lp/lpstat) are not available.
	- Drawing alpha-blended images under X11 is now accelerated with
	  Xrender.
	- The font used for the FL_COURIER font family was changed on the Mac OS X
	  platform from 'Courier New' to 'Courier' because it was too thin.
	- Text drawing on the Mac platform supports Unicode 'variation selectors'
	  in the range [0xFE00-0xFE0F].