@@ -46,6 +46,7 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? 2016
 
 	Other improvements
 
+	- Improved drawing of rounded box (STR #2943).
 	- Full support of Apple 'retina' displays for which one drawing unit
 	  corresponds to two pixels.
 	- The Mac OS X platform no longer uses the deprecated AGL
